--- a/package.json
+++ b/package.json
@@ -55,8 +55,7 @@
     "bitcoinjs-lib": "^5.1.10",
     "merkle-bitcoin": "github:boolpath/merkle-bitcoin.git",
     "promise": "*",
-    "sha3": "^2.1.3",
-    "hasher-kawpow": "github:likloadm/hasher-kawpow.git"
+    "sha3": "^2.1.3"
   },
   "deprecated": false,
   "description": "High performance Stratum poolserver in Node.js",
